# perf_test

./: Cargo.toml  README.md  cpu_profile_async.fish  cpu_profile_thread.fish  off_cpu_profile_async.fish  off_cpu_profile_thread.fish  out.folded  wake_profile_thread.fish
.cargo/: config.toml
benches/: bench.rs
src/: async_main.rs  big_io.rs  lib.rs  load_test_thread.rs  small_io.rs  thread_main.rs
